--- a/getting-started.html
+++ b/getting-started.html
@@ -67,18 +67,18 @@
       <nav role="navigation">
 
 <ul class="summary">
-<img src="img/Rlogo.png" style="width:300px;height:180px;padding-bottom:0px;"></img>
+<img src="img/Rlogo.png" style="width:150px;padding:10px 0px 0px 10px;"></img>
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="1" data-path="r-core-developers-guide.html"><a href="r-core-developers-guide.html"><i class="fa fa-check"></i><b>1</b> R Core Developer’s Guide</a></li>
 <li class="chapter" data-level="2" data-path="getting-started.html"><a href="getting-started.html"><i class="fa fa-check"></i><b>2</b> Getting Started</a><ul>
 <li class="chapter" data-level="2.1" data-path="getting-started.html"><a href="getting-started.html#general-instructions"><i class="fa fa-check"></i><b>2.1</b> General instructions</a></li>
-<li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-textsfr"><i class="fa fa-check"></i><b>2.2</b> Installing <span class="math inline">\(\textsf{R}\)</span></a></li>
-<li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-textsfr-and-textsfr-packages"><i class="fa fa-check"></i><b>2.3</b> Building <span class="math inline">\(\textsf{R}\)</span> and <span class="math inline">\(\textsf{R}\)</span> packages</a><ul>
-<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-you-need-to-build-textsfr-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools you need to build <span class="math inline">\(\textsf{R}\)</span> from source on Windows?</a></li>
+<li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-r"><i class="fa fa-check"></i><b>2.2</b> Installing R</a></li>
+<li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-r-and-r-packages"><i class="fa fa-check"></i><b>2.3</b> Building R and R packages</a><ul>
+<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools you need to build R from source on Windows?</a></li>
 <li class="chapter" data-level="2.3.2" data-path="getting-started.html"><a href="getting-started.html#how-to-setup-rtools"><i class="fa fa-check"></i><b>2.3.2</b> How to setup <code>RTools</code>?</a></li>
-<li class="chapter" data-level="2.3.3" data-path="getting-started.html"><a href="getting-started.html#how-to-build-textsfr"><i class="fa fa-check"></i><b>2.3.3</b> How to build <span class="math inline">\(\textsf{R}\)</span>?</a></li>
+<li class="chapter" data-level="2.3.3" data-path="getting-started.html"><a href="getting-started.html#how-to-build-r"><i class="fa fa-check"></i><b>2.3.3</b> How to build R?</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="getting-started.html"><a href="getting-started.html#see-also"><i class="fa fa-check"></i><b>2.4</b> See also</a></li>
 </ul></li>
@@ -103,35 +103,35 @@
             <section class="normal" id="section-">
 <div id="getting-started" class="section level1">
 <h1><span class="header-section-number">Chapter 2</span> Getting Started</h1>
-<p>These instructions cover how to install <span class="math inline">\(\textsf{R}\)</span> in Windows. The tools required to build <span class="math inline">\(\textsf{R}\)</span> and <span class="math inline">\(\textsf{R}\)</span> packages in Windows are also discussed.</p>
+<p>These instructions cover how to install R in Windows. The tools required to build R and R packages in Windows are also discussed.</p>
 <div id="general-instructions" class="section level2">
 <h2><span class="header-section-number">2.1</span> General instructions</h2>
 <ol style="list-style-type: decimal">
 <li><p>If you install the latest version or R-patched or R-devel, it will not over-write the previous installation(s) in your Windows machine.</p></li>
-<li><p>R uses a ‘major.minor.patchlevel’ version numbering scheme. Accordingly there are three main releases of <span class="math inline">\(\textsf{R}\)</span> available to install:</p>
+<li><p>R uses a ‘major.minor.patchlevel’ version numbering scheme. Accordingly there are three main releases of R available to install:</p>
 <ul>
 <li><p>The official release (<code>r-release</code>),</p></li>
 <li><p>The patched release (<code>r-patched</code>), and</p></li>
 <li><p>The development (<code>r-devel</code>) release.</p></li>
 </ul></li>
 </ol>
-<p>The <code>r-devel</code> is the next minor or eventually major release development version of <span class="math inline">\(\textsf{R}\)</span>. Mostly, bug fixes are introduced in <code>r-patched</code>, while <code>r-devel</code> is for introducing new features.</p>
+<p>The <code>r-devel</code> is the next minor or eventually major release development version of R. Mostly, bug fixes are introduced in <code>r-patched</code>, while <code>r-devel</code> is for introducing new features.</p>
 </div>
-<div id="installing-textsfr" class="section level2">
-<h2><span class="header-section-number">2.2</span> Installing <span class="math inline">\(\textsf{R}\)</span></h2>
+<div id="installing-r" class="section level2">
+<h2><span class="header-section-number">2.2</span> Installing R</h2>
 <ol style="list-style-type: decimal">
-<li><p>The binary builds of <span class="math inline">\(\textsf{R}\)</span> for Windows can be downloaded and installed from <a href="https://cran.r-project.org/bin/windows/base/">here</a>. Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.</p></li>
+<li><p>The binary builds of R for Windows can be downloaded and installed from <a href="https://cran.r-project.org/bin/windows/base/">here</a>. Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.</p></li>
 <li><p>Click on the download links to download an executable installer.</p></li>
 <li><p>Select the language while installing, read the public license information, and select destination location to the start the installation. You will be prompted to select components at this stage: <code>User installation</code>, <code>32-bit User installation</code>, <code>64-bit User installation</code>, or <code>Custom installation</code>. The default option may be opted for the questions from this step onwards to complete the installation.</p></li>
 </ol>
 </div>
-<div id="building-textsfr-and-textsfr-packages" class="section level2">
-<h2><span class="header-section-number">2.3</span> Building <span class="math inline">\(\textsf{R}\)</span> and <span class="math inline">\(\textsf{R}\)</span> packages</h2>
-<div id="what-tools-you-need-to-build-textsfr-from-source-on-windows" class="section level3">
-<h3><span class="header-section-number">2.3.1</span> What tools you need to build <span class="math inline">\(\textsf{R}\)</span> from source on Windows?</h3>
+<div id="building-r-and-r-packages" class="section level2">
+<h2><span class="header-section-number">2.3</span> Building R and R packages</h2>
+<div id="what-tools-you-need-to-build-r-from-source-on-windows" class="section level3">
+<h3><span class="header-section-number">2.3.1</span> What tools you need to build R from source on Windows?</h3>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://github.com/r-windows/docs/blob/master/faq.md#what-is-rtools">RTools</a> is the toolchain bundle that you can use to build <span class="math inline">\(\textsf{R}\)</span> base and <span class="math inline">\(\textsf{R}\)</span> packages containing compiled code, on Windows.</p></li>
-<li><p>You also need a distribution of <span class="math inline">\(\LaTeX\)</span> installed for building <span class="math inline">\(\textsf{R}\)</span> and checking packages. The <code>MiKTeX</code> distribution of <span class="math inline">\(\LaTeX\)</span> that is used on CRAN can be downloaded from <a href="https://miktex.org" class="uri">https://miktex.org</a>.</p></li>
+<li><p><a href="https://github.com/r-windows/docs/blob/master/faq.md#what-is-rtools">RTools</a> is the toolchain bundle that you can use to build R base and R packages containing compiled code, on Windows.</p></li>
+<li><p>You also need a distribution of <span class="math inline">\(\LaTeX\)</span> installed for building R and checking packages. The <code>MiKTeX</code> distribution of <span class="math inline">\(\LaTeX\)</span> that is used on CRAN can be downloaded from <a href="https://miktex.org" class="uri">https://miktex.org</a>.</p></li>
 </ol>
 </div>
 <div id="how-to-setup-rtools" class="section level3">
@@ -141,12 +141,12 @@
 <li><p>Don’t forget to add <code>RTools</code> to the path as documented on the download page.</p></li>
 </ol>
 </div>
-<div id="how-to-build-textsfr" class="section level3">
-<h3><span class="header-section-number">2.3.3</span> How to build <span class="math inline">\(\textsf{R}\)</span>?</h3>
-<p>To build <span class="math inline">\(\textsf{R}\)</span> for Windows using <code>RTools</code> follow the instructions in this <a href="https://github.com/r-windows/r-base#readme">README</a> file. There are two options available to build <span class="math inline">\(\textsf{R}\)</span>. One is the quick development build and the other option is the full installer build.</p>
+<div id="how-to-build-r" class="section level3">
+<h3><span class="header-section-number">2.3.3</span> How to build R?</h3>
+<p>To build R for Windows using <code>RTools</code> follow the instructions in this <a href="https://github.com/r-windows/r-base#readme">README</a> file. There are two options available to build R. One is the quick development build and the other option is the full installer build.</p>
 <p>For development and testing, you need only the quick development build. The quick build avoids building the manuals, which are generally not needed for development and testing.</p>
-<p>However, even for the quick build there are some <a href="https://github.com/r-windows/r-base/blob/master/quick-build.sh">default requirements</a>. For instance, <code>MikTeX</code> is to be installed in <code>C:/Program Files</code> and you have 64-bit <span class="math inline">\(\textsf{R}\)</span>. If necessary, these defaults can be customised. The installation path of <code>MikTex</code> can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13">here</a> whereas the Windows bit can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6">here</a>.</p>
-<p>If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN. It will build both the 32-bit and 64-bit <span class="math inline">\(\textsf{R}\)</span>, the pdf manuals, and the installer program. You will use this to create the binary builds and not when building <span class="math inline">\(\textsf{R}\)</span> from the source yourself.</p>
+<p>However, even for the quick build there are some <a href="https://github.com/r-windows/r-base/blob/master/quick-build.sh">default requirements</a>. For instance, <code>MikTeX</code> is to be installed in <code>C:/Program Files</code> and you have 64-bit R. If necessary, these defaults can be customised. The installation path of <code>MikTex</code> can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13">here</a> whereas the Windows bit can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6">here</a>.</p>
+<p>If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN. It will build both the 32-bit and 64-bit R, the pdf manuals, and the installer program. You will use this to create the binary builds and not when building R from the source yourself.</p>
 </div>
 </div>
 <div id="see-also" class="section level2">
