--- a/r-core-developers-guide.html
+++ b/r-core-developers-guide.html
@@ -67,18 +67,18 @@
       <nav role="navigation">
 
 <ul class="summary">
-<img src="img/Rlogo.png" style="width:300px;height:180px;padding-bottom:0px;"></img>
+<img src="img/Rlogo.png" style="width:150px;padding:10px 0px 0px 10px;"></img>
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="1" data-path="r-core-developers-guide.html"><a href="r-core-developers-guide.html"><i class="fa fa-check"></i><b>1</b> R Core Developer’s Guide</a></li>
 <li class="chapter" data-level="2" data-path="getting-started.html"><a href="getting-started.html"><i class="fa fa-check"></i><b>2</b> Getting Started</a><ul>
 <li class="chapter" data-level="2.1" data-path="getting-started.html"><a href="getting-started.html#general-instructions"><i class="fa fa-check"></i><b>2.1</b> General instructions</a></li>
-<li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-textsfr"><i class="fa fa-check"></i><b>2.2</b> Installing <span class="math inline">\(\textsf{R}\)</span></a></li>
-<li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-textsfr-and-textsfr-packages"><i class="fa fa-check"></i><b>2.3</b> Building <span class="math inline">\(\textsf{R}\)</span> and <span class="math inline">\(\textsf{R}\)</span> packages</a><ul>
-<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-you-need-to-build-textsfr-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools you need to build <span class="math inline">\(\textsf{R}\)</span> from source on Windows?</a></li>
+<li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-r"><i class="fa fa-check"></i><b>2.2</b> Installing R</a></li>
+<li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-r-and-r-packages"><i class="fa fa-check"></i><b>2.3</b> Building R and R packages</a><ul>
+<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools you need to build R from source on Windows?</a></li>
 <li class="chapter" data-level="2.3.2" data-path="getting-started.html"><a href="getting-started.html#how-to-setup-rtools"><i class="fa fa-check"></i><b>2.3.2</b> How to setup <code>RTools</code>?</a></li>
-<li class="chapter" data-level="2.3.3" data-path="getting-started.html"><a href="getting-started.html#how-to-build-textsfr"><i class="fa fa-check"></i><b>2.3.3</b> How to build <span class="math inline">\(\textsf{R}\)</span>?</a></li>
+<li class="chapter" data-level="2.3.3" data-path="getting-started.html"><a href="getting-started.html#how-to-build-r"><i class="fa fa-check"></i><b>2.3.3</b> How to build R?</a></li>
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="getting-started.html"><a href="getting-started.html#see-also"><i class="fa fa-check"></i><b>2.4</b> See also</a></li>
 </ul></li>
