--- a/getting-started.html
+++ b/getting-started.html
@@ -161,6 +161,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.9" data-path="bug-tracking.html"><a href="bug-tracking.html#examples-of-bug-reports-submitted-on-bugzilla"><i class="fa fa-check"></i><b>3.9</b> Examples of Bug reports submitted on Bugzilla</a></li>
 <li class="chapter" data-level="3.10" data-path="bug-tracking.html"><a href="bug-tracking.html#see-also-1"><i class="fa fa-check"></i><b>3.10</b> See also</a></li>
 </ul></li>
+<li class="chapter" data-level="4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html"><i class="fa fa-check"></i><b>4</b> Reviewing Bugs</a><ul>
+<li class="chapter" data-level="4.1" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1</b> How you can help to review bug reports?</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>4.1.1</b> Preparing to review bug reports</a></li>
+</ul></li>
+<li class="chapter" data-level="4.2" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>4.2</b> Classifying bug reports</a></li>
+<li class="chapter" data-level="4.3" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.3</b> How to find a bug report or an issue to review?</a></li>
+<li class="chapter" data-level="4.4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#share-that-you-can-report-on-bugreports-for-review-on-r-devel-slack-or-on-the-gh-mirror"><i class="fa fa-check"></i><b>4.4</b> share that you can report on bugreports for review on r-devel slack or on the GH mirror</a></li>
+<li class="chapter" data-level="4.5" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.5</b> Example of a bug review submitted on Bugzilla</a></li>
+<li class="chapter" data-level="4.6" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#see-also-2"><i class="fa fa-check"></i><b>4.6</b> See also</a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 </ul>
