--- a/getting-started.html
+++ b/getting-started.html
@@ -24,7 +24,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2021-04-12" />
+<meta name="date" content="2021-04-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -167,9 +167,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="4.2" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>4.2</b> Classifying bug reports</a></li>
 <li class="chapter" data-level="4.3" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.3</b> How to find a bug report or an issue to review?</a></li>
-<li class="chapter" data-level="4.4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#share-that-you-can-report-on-bugreports-for-review-on-r-devel-slack-or-on-the-gh-mirror"><i class="fa fa-check"></i><b>4.4</b> share that you can report on bugreports for review on r-devel slack or on the GH mirror</a></li>
-<li class="chapter" data-level="4.5" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.5</b> Example of a bug review submitted on Bugzilla</a></li>
-<li class="chapter" data-level="4.6" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#see-also-2"><i class="fa fa-check"></i><b>4.6</b> See also</a></li>
+<li class="chapter" data-level="4.4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.4</b> Example of a bug review submitted on Bugzilla</a></li>
+<li class="chapter" data-level="4.5" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#see-also-2"><i class="fa fa-check"></i><b>4.5</b> See also</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -220,7 +219,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">2.3.1</span> What tools you need to build R from source on Windows?</h3>
 <ol style="list-style-type: decimal">
 <li><p><a href="https://github.com/r-windows/docs/blob/master/faq.md#what-is-rtools">RTools</a> is the toolchain bundle that you can use to build R base and R packages containing compiled code, on Windows.</p></li>
-<li><p>You also need a distribution of <span class="math inline">\(\LaTeX\)</span> installed for building R and checking packages. The <code>MiKTeX</code> distribution of <span class="math inline">\(\LaTeX\)</span> that is used on CRAN can be downloaded from <a href="https://miktex.org" class="uri">https://miktex.org</a>.</p></li>
+<li><p>You also need a distribution of <span class="math inline">\(\LaTeX\)</span> installed for building R and checking packages. The MiKTeX distribution of LaTeX that is used on CRAN can be downloaded from <a href="https://miktex.org" class="uri">https://miktex.org</a>.</p></li>
 </ol>
 </div>
 <div id="how-to-setup-rtools" class="section level3">
@@ -234,7 +233,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">2.3.3</span> How to build R?</h3>
 <p>To build R for Windows using <code>RTools</code> follow the instructions in this <a href="https://github.com/r-windows/r-base#readme">README</a> file. There are two options available to build R. One is the quick development build and the other option is the full installer build.</p>
 <p>For development and testing, you need only the quick development build. The quick build avoids building the manuals, which are generally not needed for development and testing.</p>
-<p>However, even for the quick build there are some <a href="https://github.com/r-windows/r-base/blob/master/quick-build.sh">default requirements</a>. For instance, <code>MikTeX</code> is to be installed in <code>C:/Program Files</code> and you have 64-bit R. If necessary, these defaults can be customised. The installation path of <code>MikTex</code> can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13">here</a> whereas the Windows bit can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6">here</a>.</p>
+<p>However, even for the quick build there are some <a href="https://github.com/r-windows/r-base/blob/master/quick-build.sh">default requirements</a>. For instance, MikTeX is to be installed in <code>C:/Program Files</code> and you have 64-bit R. If necessary, these defaults can be customised. The installation path of MikTex can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13">here</a> whereas the Windows bit can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6">here</a>.</p>
 <p>If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN. It will build both the 32-bit and 64-bit R, the pdf manuals, and the installer program. You will use this to create the binary builds and not when building R from the source yourself.</p>
 </div>
 </div>
