--- a/bug-tracking.html
+++ b/bug-tracking.html
@@ -275,7 +275,7 @@ When you are in doubt that there is a bug:</p>
 </div>
 <div id="disagreement-with-a-resolution-on-the-bug-tracker" class="section level2">
 <h2><span class="header-section-number">3.8</span> Disagreement with a resolution on the bug tracker</h2>
-<p>As humans, there might be differences of opinions from time to time. What needs to be considered here is that, we are respectful of the fact that care, thought, and volunteer time has gone into the resolution of the issue or bug.</p>
+<p>As humans, there might be differences of opinions from time to time. What needs to be considered here is that, being respectful of the fact that care, thought, and volunteer time has gone into the resolution of the issue or bug.</p>
 <p>If you take some time, then on reflection, the resolution steps may seem more reasonable than you initially thought. If you still feel that the resolution is incorrect, then raise a thoughtful question to the person who resolved it. If the issue was carefully thought about in the first place then is less likely to win any conversion of thought.</p>
 <p>As a reminder, issues closed by a core developer on Bugzilla have already been carefully considered. Please do not reopen a closed issue. Although one can comment on a closed issue, if necessary. Every comment on an issue generates an email to every R-core member (unless they have the notifications disabled). So it would be best to be considerate while commenting on issues, especially in case of the closed issues or when you are commenting in pure agreement without adding anything beyond that to a discussion (the +1 type posts which are perfectly acceptable in other contexts).</p>
 </div>
