SaranjeetKaur published a site update

--- a/bug-tracking.html
+++ b/bug-tracking.html
@@ -161,7 +161,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="3.7" data-path="bug-tracking.html"><a href="bug-tracking.html#good-practices-in-reporting-bugs-expectations-of-a-good-bug-report"><i class="fa fa-check"></i><b>3.7</b> Good practices in reporting bugs / Expectations of a good bug report</a></li>
 <li class="chapter" data-level="3.8" data-path="bug-tracking.html"><a href="bug-tracking.html#disagreement-with-a-resolution-on-the-bug-tracker"><i class="fa fa-check"></i><b>3.8</b> Disagreement with a resolution on the bug tracker</a></li>
-<li class="chapter" data-level="3.9" data-path="bug-tracking.html"><a href="bug-tracking.html#examples-of-bug-reports-submitted-on-bugzilla"><i class="fa fa-check"></i><b>3.9</b> Examples of Bug reports submitted on Bugzilla</a></li>
+<li class="chapter" data-level="3.9" data-path="bug-tracking.html"><a href="bug-tracking.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>3.9</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
 <li class="chapter" data-level="3.10" data-path="bug-tracking.html"><a href="bug-tracking.html#see-also-1"><i class="fa fa-check"></i><b>3.10</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html"><i class="fa fa-check"></i><b>4</b> Reviewing Bugs</a><ul>
@@ -284,12 +284,14 @@ When you are in doubt that there is a bug: (which should be most of the time!)</
 <p>If you take some time, then on reflection, the resolution steps may seem more reasonable than you initially thought. If you still feel that the resolution is incorrect, then raise a thoughtful question to the person who resolved it. If the issue was carefully thought about in the first place then is less likely to win any conversion of thought.</p>
 <p>As a reminder, issues closed by a core developer on Bugzilla have already been carefully considered. Please do not reopen a closed issue. Although one can comment on a closed issue, if necessary. Every comment on an issue generates an email to every R-core member (unless they have the notifications disabled). So it would be best to be considerate while commenting on issues, especially in case of the closed issues or when you are commenting in pure agreement without adding anything beyond that to a discussion (the +1 type posts which are perfectly acceptable in other contexts).</p>
 </div>
-<div id="examples-of-bug-reports-submitted-on-bugzilla" class="section level2">
-<h2><span class="header-section-number">3.9</span> Examples of Bug reports submitted on Bugzilla</h2>
+<div id="examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list" class="section level2">
+<h2><span class="header-section-number">3.9</span> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</h2>
 <p>If you like to see how bugs are reported on Bugzilla, here are some examples:</p>
 <ol style="list-style-type: decimal">
 <li><p>A <a href="https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17767">bug report</a> with a reproducible example, a patch, and a review.</p></li>
-<li><p>A <a href="https://stat.ethz.ch/pipermail/r-devel/2019-May/077855.html">bug report</a> submitted via R-devel mailing list. (More information about the R-devel mailing list can be found <a href="https://stat.ethz.ch/mailman/listinfo/r-devel">here</a>).</p></li>
+<li><p>A <a href="https://stat.ethz.ch/pipermail/r-devel/2019-May/077855.html">bug report</a> submitted by Kara Woo which was promptly fixed via the R-devel mailing list. (More information about the R-devel mailing list can be found <a href="https://stat.ethz.ch/mailman/listinfo/r-devel">here</a>).</p></li>
+<li><p>A substring <a href="https://stat.ethz.ch/pipermail/r-devel/2019-February/077393.html">bug reported</a> by Toby Dylan Hocking and fixed by Tomas Kalibera, Feb 2019 via the R-devel mailing list.</p></li>
+<li><p>A gregexpr <a href="https://stat.ethz.ch/pipermail/r-devel/2019-February/077315.html">bug report and patch</a> submitted by Toby Dylan Hocking and merged by Tomas Kalibera, Feb 2019 via the R-devel mailing list.</p></li>
 </ol>
 </div>
 <div id="see-also-1" class="section level2">
