willingc published a site update

--- a/bug-tracking.html
+++ b/bug-tracking.html
@@ -149,7 +149,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.1" data-path="getting-started.html"><a href="getting-started.html#general-instructions"><i class="fa fa-check"></i><b>2.1</b> General instructions</a></li>
 <li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-r"><i class="fa fa-check"></i><b>2.2</b> Installing R</a></li>
 <li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-r-and-r-packages"><i class="fa fa-check"></i><b>2.3</b> Building R and R packages</a><ul>
-<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools you need to build R from source on Windows?</a></li>
+<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-do-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools do you need to build R from source on Windows?</a></li>
 <li class="chapter" data-level="2.3.2" data-path="getting-started.html"><a href="getting-started.html#how-to-setup-rtools"><i class="fa fa-check"></i><b>2.3.2</b> How to setup <code>RTools</code>?</a></li>
 <li class="chapter" data-level="2.3.3" data-path="getting-started.html"><a href="getting-started.html#how-to-build-r"><i class="fa fa-check"></i><b>2.3.3</b> How to build R?</a></li>
 </ul></li>
