--- a/getting-started.html
+++ b/getting-started.html
@@ -149,7 +149,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.1" data-path="getting-started.html"><a href="getting-started.html#general-instructions"><i class="fa fa-check"></i><b>2.1</b> General instructions</a></li>
 <li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-r"><i class="fa fa-check"></i><b>2.2</b> Installing R</a></li>
 <li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-r-and-r-packages"><i class="fa fa-check"></i><b>2.3</b> Building R and R packages</a><ul>
-<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools you need to build R from source on Windows?</a></li>
+<li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-do-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools do you need to build R from source on Windows?</a></li>
 <li class="chapter" data-level="2.3.2" data-path="getting-started.html"><a href="getting-started.html#how-to-setup-rtools"><i class="fa fa-check"></i><b>2.3.2</b> How to setup <code>RTools</code>?</a></li>
 <li class="chapter" data-level="2.3.3" data-path="getting-started.html"><a href="getting-started.html#how-to-build-r"><i class="fa fa-check"></i><b>2.3.3</b> How to build R?</a></li>
 </ul></li>
@@ -219,13 +219,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ol style="list-style-type: decimal">
 <li><p>The binary builds of R for Windows can be downloaded and installed from <a href="https://cran.r-project.org/bin/windows/base/">here</a>. Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.</p></li>
 <li><p>Click on the download links to download an executable installer.</p></li>
-<li><p>Select the language while installing, read the public license information, and select destination location to the start the installation. You will be prompted to select components at this stage: <code>User installation</code>, <code>32-bit User installation</code>, <code>64-bit User installation</code>, or <code>Custom installation</code>. The default option may be opted for the questions from this step onwards to complete the installation.</p></li>
+<li><p>Select the language while installing, read the public license information, and select the destination location to start the installation. You will be prompted to select components at this stage: <code>User installation</code>, <code>32-bit User installation</code>, <code>64-bit User installation</code>, or <code>Custom installation</code>. The default option may be opted for the questions from this step onwards to complete the installation.</p></li>
 </ol>
 </div>
 <div id="building-r-and-r-packages" class="section level2">
 <h2><span class="header-section-number">2.3</span> Building R and R packages</h2>
-<div id="what-tools-you-need-to-build-r-from-source-on-windows" class="section level3">
-<h3><span class="header-section-number">2.3.1</span> What tools you need to build R from source on Windows?</h3>
+<div id="what-tools-do-you-need-to-build-r-from-source-on-windows" class="section level3">
+<h3><span class="header-section-number">2.3.1</span> What tools do you need to build R from source on Windows?</h3>
 <ol style="list-style-type: decimal">
 <li><p><a href="https://github.com/r-windows/docs/blob/master/faq.md#what-is-rtools">RTools</a> is the toolchain bundle that you can use to build R base and R packages containing compiled code, on Windows.</p></li>
 <li><p>You also need a distribution of <span class="math inline">\(\LaTeX\)</span> installed for building R and checking packages. The MiKTeX distribution of LaTeX that is used on CRAN can be downloaded from <a href="https://miktex.org" class="uri">https://miktex.org</a>.</p></li>
@@ -242,7 +242,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">2.3.3</span> How to build R?</h3>
 <p>To build R for Windows using <code>RTools</code> follow the instructions in this <a href="https://github.com/r-windows/r-base#readme">README</a> file. There are two options available to build R. One is the quick development build and the other option is the full installer build.</p>
 <p>For development and testing, you need only the quick development build. The quick build avoids building the manuals, which are generally not needed for development and testing.</p>
-<p>However, even for the quick build there are some <a href="https://github.com/r-windows/r-base/blob/master/quick-build.sh">default requirements</a>. For instance, MikTeX is to be installed in <code>C:/Program Files</code> and you have 64-bit R. If necessary, these defaults can be customised. The installation path of MikTex can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13">here</a> whereas the Windows bit can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6">here</a>.</p>
+<p>However, even for the quick build there are some <a href="https://github.com/r-windows/r-base/blob/master/quick-build.sh">default requirements</a>. For instance, MiKTeX is to be installed in <code>C:/Program Files</code> and you have 64-bit R. If necessary, these defaults can be customised. The installation path of MiKTeX can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L13">here</a> whereas the Windows bit can be customised <a href="https://github.com/r-windows/r-base/blob/50a229fc76c50a5fb42c0daa367466aaf2318171/quick-build.sh#L6">here</a>.</p>
 <p>If you are a maintainer of the Windows CRAN releases then, the full installer build is available for building the complete installer as it appears on CRAN. It will build both the 32-bit and 64-bit R, the pdf manuals, and the installer program. You will use this to create the binary builds and not when building R from the source yourself.</p>
 </div>
 </div>
