SaranjeetKaur published a site update

--- a/bug-tracking.html
+++ b/bug-tracking.html
@@ -24,7 +24,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2021-05-03" />
+<meta name="date" content="2021-05-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -147,7 +147,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1" data-path="r-core-developers-guide.html"><a href="r-core-developers-guide.html"><i class="fa fa-check"></i><b>1</b> R Core Developer’s Guide</a></li>
 <li class="chapter" data-level="2" data-path="getting-started.html"><a href="getting-started.html"><i class="fa fa-check"></i><b>2</b> Getting Started</a><ul>
 <li class="chapter" data-level="2.1" data-path="getting-started.html"><a href="getting-started.html#general-instructions"><i class="fa fa-check"></i><b>2.1</b> General instructions</a></li>
-<li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installing-r"><i class="fa fa-check"></i><b>2.2</b> Installing R</a></li>
+<li class="chapter" data-level="2.2" data-path="getting-started.html"><a href="getting-started.html#installR"><i class="fa fa-check"></i><b>2.2</b> Installing R</a></li>
 <li class="chapter" data-level="2.3" data-path="getting-started.html"><a href="getting-started.html#building-r-and-r-packages"><i class="fa fa-check"></i><b>2.3</b> Building R and R packages</a><ul>
 <li class="chapter" data-level="2.3.1" data-path="getting-started.html"><a href="getting-started.html#what-tools-do-you-need-to-build-r-from-source-on-windows"><i class="fa fa-check"></i><b>2.3.1</b> What tools do you need to build R from source on Windows?</a></li>
 <li class="chapter" data-level="2.3.2" data-path="getting-started.html"><a href="getting-started.html#how-to-setup-rtools"><i class="fa fa-check"></i><b>2.3.2</b> How to setup <code>RTools</code>?</a></li>
@@ -178,6 +178,23 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.3" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>4.3</b> How to find a bug report or an issue to review?</a></li>
 <li class="chapter" data-level="4.4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.4</b> Example of a bug review submitted on Bugzilla</a></li>
 <li class="chapter" data-level="4.5" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#see-also-2"><i class="fa fa-check"></i><b>4.5</b> See also</a></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="FixBug.html"><a href="FixBug.html"><i class="fa fa-check"></i><b>5</b> Lifecycle of a Patch</a><ul>
+<li class="chapter" data-level="5.1" data-path="FixBug.html"><a href="FixBug.html#introduction"><i class="fa fa-check"></i><b>5.1</b> Introduction</a></li>
+<li class="chapter" data-level="5.2" data-path="FixBug.html"><a href="FixBug.html#when-do-you-submit-a-patch"><i class="fa fa-check"></i><b>5.2</b> When do you submit a patch?</a></li>
+<li class="chapter" data-level="5.3" data-path="FixBug.html"><a href="FixBug.html#what-tools-are-required-to-submit-a-patch"><i class="fa fa-check"></i><b>5.3</b> What tools are required to submit a patch?</a></li>
+<li class="chapter" data-level="5.4" data-path="FixBug.html"><a href="FixBug.html#how-to-prepare-a-patch"><i class="fa fa-check"></i><b>5.4</b> How to prepare a patch?</a></li>
+<li class="chapter" data-level="5.5" data-path="FixBug.html"><a href="FixBug.html#GoodPatches"><i class="fa fa-check"></i><b>5.5</b> Making good patches</a></li>
+<li class="chapter" data-level="5.6" data-path="FixBug.html"><a href="FixBug.html#submitting-your-patch-for-review"><i class="fa fa-check"></i><b>5.6</b> Submitting your patch for review</a></li>
+<li class="chapter" data-level="5.7" data-path="FixBug.html"><a href="FixBug.html#getting-your-patch-reviewed"><i class="fa fa-check"></i><b>5.7</b> Getting your patch reviewed</a><ul>
+<li class="chapter" data-level="5.7.1" data-path="FixBug.html"><a href="FixBug.html#how-to-review-a-patch"><i class="fa fa-check"></i><b>5.7.1</b> How to review a patch?</a></li>
+</ul></li>
+<li class="chapter" data-level="5.8" data-path="FixBug.html"><a href="FixBug.html#leaving-a-patch-review-on-bugzilla"><i class="fa fa-check"></i><b>5.8</b> Leaving a patch review on Bugzilla</a></li>
+<li class="chapter" data-level="5.9" data-path="FixBug.html"><a href="FixBug.html#dismissing-review-from-another-core-developer"><i class="fa fa-check"></i><b>5.9</b> Dismissing review from another core developer</a></li>
+<li class="chapter" data-level="5.10" data-path="FixBug.html"><a href="FixBug.html#acceptance-or-rejection-of-your-patch"><i class="fa fa-check"></i><b>5.10</b> Acceptance or rejection of your patch</a></li>
+<li class="chapter" data-level="5.11" data-path="FixBug.html"><a href="FixBug.html#examples-of-patch-reports-on-bugzilla"><i class="fa fa-check"></i><b>5.11</b> Examples of patch reports on Bugzilla</a></li>
+<li class="chapter" data-level="5.12" data-path="FixBug.html"><a href="FixBug.html#examples-of-reviewing-a-patch"><i class="fa fa-check"></i><b>5.12</b> Examples of reviewing a patch</a></li>
+<li class="chapter" data-level="5.13" data-path="FixBug.html"><a href="FixBug.html#see-also-3"><i class="fa fa-check"></i><b>5.13</b> See also</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -245,7 +262,7 @@ When you are in doubt that there is a bug: (which should be most of the time!)</
 <ol style="list-style-type: decimal">
 <li><p><a href="bug-tracking.html#ReportBug">Report</a> the bug (if it is not already reported).</p></li>
 <li><p><a href="provide%20hyperlink%20to%20the%20section/chapter%20which%20discusses%20this%20also%20include%20comment%201%20from%20getting%20started%20chapter">Test</a> the bug.</p></li>
-<li><p><a href="hyperlink%20to%20the%20chapter%20on%20the%20lifecycle%20of%20a%20patch">Fix</a> the bug: Fixing a bug might require relatively more time. You may start a conversation about it on <a href="https://bugs.r-project.org/bugzilla/index.cgi">BugZilla</a>. This would require engagement with R Core team.</p></li>
+<li><p><a href="FixBug.html#FixBug">Fix</a> the bug: Fixing a bug might require relatively more time. You may start a conversation about it on <a href="https://bugs.r-project.org/bugzilla/index.cgi">BugZilla</a>. This would require engagement with R Core team.</p></li>
 </ol>
 </div>
 <div id="what-are-some-places-where-you-may-find-a-bug" class="section level2">
