--- a/reviewing-bugs.html
+++ b/reviewing-bugs.html
@@ -196,6 +196,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.12" data-path="FixBug.html"><a href="FixBug.html#examples-of-reviewing-a-patch"><i class="fa fa-check"></i><b>5.12</b> Examples of reviewing a patch</a></li>
 <li class="chapter" data-level="5.13" data-path="FixBug.html"><a href="FixBug.html#see-also-3"><i class="fa fa-check"></i><b>5.13</b> See also</a></li>
 </ul></li>
+<li class="chapter" data-level="6" data-path="r-core-developers.html"><a href="r-core-developers.html"><i class="fa fa-check"></i><b>6</b> R Core Developers</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 </ul>
