--- a/r-core-developers.html
+++ b/r-core-developers.html
@@ -32,7 +32,7 @@
   
   
 <link rel="prev" href="FixBug.html"/>
-
+<link rel="next" href="WhereToGetHelp.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -197,6 +197,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.13" data-path="FixBug.html"><a href="FixBug.html#see-also-3"><i class="fa fa-check"></i><b>5.13</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="r-core-developers.html"><a href="r-core-developers.html"><i class="fa fa-check"></i><b>6</b> R Core Developers</a></li>
+<li class="chapter" data-level="7" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html"><i class="fa fa-check"></i><b>7</b> Where to get help</a><ul>
+<li class="chapter" data-level="7.1" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#slack"><i class="fa fa-check"></i><b>7.1</b> Slack</a></li>
+<li class="chapter" data-level="7.2" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#mailing-lists"><i class="fa fa-check"></i><b>7.2</b> Mailing Lists</a></li>
+<li class="chapter" data-level="7.3" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#file-a-bug"><i class="fa fa-check"></i><b>7.3</b> File a Bug</a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 </ul>
@@ -256,8 +261,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="FixBug.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="FixBug.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="WhereToGetHelp.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
