--- a/r-core-developers-guide.html
+++ b/r-core-developers-guide.html
@@ -197,6 +197,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.13" data-path="FixBug.html"><a href="FixBug.html#see-also-3"><i class="fa fa-check"></i><b>5.13</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="r-core-developers.html"><a href="r-core-developers.html"><i class="fa fa-check"></i><b>6</b> R Core Developers</a></li>
+<li class="chapter" data-level="7" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html"><i class="fa fa-check"></i><b>7</b> Where to get help</a><ul>
+<li class="chapter" data-level="7.1" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#slack"><i class="fa fa-check"></i><b>7.1</b> Slack</a></li>
+<li class="chapter" data-level="7.2" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#mailing-lists"><i class="fa fa-check"></i><b>7.2</b> Mailing Lists</a></li>
+<li class="chapter" data-level="7.3" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#file-a-bug"><i class="fa fa-check"></i><b>7.3</b> File a Bug</a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 </ul>
