--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2021-05-26" />
+<meta name="date" content="2021-06-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -224,7 +224,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Contributing to R Core</h1>
 <p class="author"><em>R Contribution Working Group</em></p>
-<p class="date" style="margin-top: 1.5em;"><em>2021-05-26</em></p>
+<p class="date" style="margin-top: 1.5em;"><em>2021-06-01</em></p>
 </div>
 <div id="section" class="section level1 unnumbered">
 <h1></h1>
@@ -268,8 +268,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/forwards/rdevguide/edit/master/index.Rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
