--- a/bug-tracking.html
+++ b/bug-tracking.html
@@ -24,7 +24,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2021-05-26" />
+<meta name="date" content="2021-06-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -371,8 +371,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/forwards/rdevguide/edit/master/03-bug_tracking_in_R.Rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
