--- a/r-core-developers.html
+++ b/r-core-developers.html
@@ -24,7 +24,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2021-05-26" />
+<meta name="date" content="2021-06-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -294,8 +294,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/forwards/rdevguide/edit/master/R_Core_Developers.Rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
